syntax = "proto3";

package golem.shardmanager;

import "golem/shardmanager/pod.proto";
import "golem/shardmanager/shard_id.proto";

message RoutingTableEntry {
  ShardId shard_id = 1;
  Pod pod = 2;
}
